# learn-ye-python

./: .gitignore  clean_837.py  learn-ye-python.code-workspace
attrs/: file_attrs.ipynb
hello/: notebook.ipynb  pyproject.toml
hello/src/hello/: __init__.py
hello/tests/: test_hello.py
md/: plan.md  session-00.md  session-06.md
parse_args/: pyproject.toml
parse_args/src/parse_args/: __main__.py
parse_args/tests/: test_parse_args.py
pyracing/: README.md  pyproject.toml  window.drawio
pyracing/src/pyracing/: __init__.py  __main__.py  cars.py  face.py
pyracing/src/pyracing/sprites/: __init__.py  counter.py  enemy.py  number.py  player.py
pyracing/tests/: test_pyracing.py
pyweather/: README.md  main.py  pyproject.toml
pyweather/src/pyweather/: app.py  server.py
pyweather/tests/: test_pyweather.py
rapid_refresh/: inventory.yml  main.py
snek/: pyproject.toml
snek/src/snek/: demo.py  draw_face.py
snek/tests/: test_snek.py
