[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Maximilian Burszley <mburszley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.4.10"
requests = "^2.27.1"
pandas = "^1.4.2"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.942"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
