[tool.poetry]
name = "pyweather"
version = "0.1.0"
description = ""
authors = ["Maximilian Burszley <mburszley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.28.0"
rich = "^12.4.4"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
